--- a/Translations/pt_BR.po
+++ b/Translations/pt_BR.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: DevilutionX\n"
 "POT-Creation-Date: 2024-07-23 12:46-0300\n"
-"PO-Revision-Date: 2025-04-08 21:56-0300\n"
+"PO-Revision-Date: 2025-04-11 19:11-0300\n"
 "Last-Translator: Altieres Lima da Silva <altieres.lima@gmail.com>\n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -4945,7 +4945,7 @@ msgstr "Voltar"
 
 #: Source/stores.cpp:292 Source/stores.cpp:298 Source/stores.cpp:324
 msgid ",  "
-msgstr ""
+msgstr ",  "
 
 #: Source/stores.cpp:309
 #, c++-format
